--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "table": "^6.8.2"
   }
 }
