--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
     "pg": "^8.12.0",
-    "table": "^6.8.2"
+    "table": "^6.8.2",
+    "validator": "^13.12.0"
   }
 }
